--- a/RoskildeProjekt-master/src/main/resources/EditShifts.fxml
+++ b/RoskildeProjekt-master/src/main/resources/EditShifts.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -14,24 +15,27 @@
         -fx-background-size: cover, auto;
     </style>
     <children>
-        <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="318.0" text="L o g g e d  i n  a s :  R e s p o n s i b l e">
+        <Label layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="318.0" text="Logged in as: Responsible">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Button layoutX="528.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#logout" style="-fx-background-color: transparent;" text="L o g  o u t" />
+        <Button layoutX="528.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#logout" style="-fx-background-color: transparent;" text="Log out" />
         <Button layoutX="14.0" layoutY="40.0" mnemonicParsing="false" onMouseClicked="#GoBackMenuR" style="-fx-background-color: transparent;" text="←">
             <font>
                 <Font name="System Bold" size="12.0" />
             </font>
         </Button>
-         <TableView fx:id="table" editable="true" layoutX="-2.0" layoutY="59.0" prefHeight="341.0" prefWidth="604.0">
+         <TableView fx:id="table" editable="true" layoutY="68.0" prefHeight="305.0" prefWidth="378.0">
            <columns>
-               <TableColumn fx:id="name" prefWidth="134.0" text="Name" />
-             <TableColumn fx:id="date" prefWidth="162.0" text="Date" />
-             <TableColumn fx:id="task" prefWidth="158.0" text="Task" />
-               <TableColumn fx:id="time" minWidth="6.0" prefWidth="149.0" text="Time" />
+               <TableColumn fx:id="name" prefWidth="89.0" text="Name" />
+             <TableColumn fx:id="date" prefWidth="86.0" text="Date" />
+             <TableColumn fx:id="task" prefWidth="98.0" text="Task" />
+               <TableColumn fx:id="time" minWidth="6.0" prefWidth="104.0" text="Time" />
            </columns>
          </TableView>
+         <TextField fx:id="taskSearch" layoutX="391.0" layoutY="66.0" onKeyTyped="#key" promptText="Search for task to delete" />
+         <Button fx:id="taskDeleteButton" layoutX="540.0" layoutY="66.0" mnemonicParsing="false" onAction="#delete" text="Delete" />
+         <Label fx:id="taskFound" layoutX="391.0" layoutY="108.0" prefHeight="17.0" prefWidth="121.0" />
     </children></AnchorPane>
 </Scene>
