--- a/RoskildeProjekt-master/src/main/resources/CreateShifts.fxml
+++ b/RoskildeProjekt-master/src/main/resources/CreateShifts.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<Scene xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CreateShiftsController">
+<Scene xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="createShiftsController">
 <AnchorPane prefHeight="400.0" prefWidth="600.0">
     <style> -fx-background-image: url("https://browsecat.net/sites/default/files/orange-background-hd-126457-577970-1988082.png");
         -fx-background-size: cover, auto;
@@ -57,7 +57,7 @@
                <Font size="10.0" />
             </font>
          </Label>
-         <Label fx:id="succesfully" layoutX="200.0" layoutY="368.0" prefHeight="18.0" prefWidth="186.0" text="" textFill="#00ff09" />
+         <Label fx:id="successfully" layoutX="200.0" layoutY="368.0" prefHeight="18.0" prefWidth="186.0" text="" textFill="#00ff09" />
     </children></AnchorPane>
 
 </Scene>
