--- a/RoskildeProjekt-master/src/main/resources/CreateVolunteer.fxml
+++ b/RoskildeProjekt-master/src/main/resources/CreateVolunteer.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<Scene xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CreateVController">
+<Scene xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="createVController">
 <AnchorPane prefHeight="400.0" prefWidth="600.0">
     <style> -fx-background-image: url("https://browsecat.net/sites/default/files/orange-background-hd-126457-577970-1988082.png");
         -fx-background-size: cover, auto;
