--- a/RoskildeProjekt-master/src/main/resources/contactR.fxml
+++ b/RoskildeProjekt-master/src/main/resources/contactR.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<Scene xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ContactRcontroller">
+<Scene xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contactRcontroller">
     <AnchorPane prefHeight="400.0" prefWidth="600.0">
         <style> -fx-background-image: url("https://browsecat.net/sites/default/files/orange-background-hd-126457-577970-1988082.png");
             -fx-background-size: cover, auto;
